--- a/about/about.html
+++ b/about/about.html
@@ -39,6 +39,7 @@
         <h1>About Me</h1>
         <p>Hi I am Ignas Vol&ccaron;okas 👋, a rising junior in Washington and Lee University. I am majoring in Computer Science and minoring in Philosophy.
             I am currently a Teaching Assistant for the Computer Science department and an Editorial Assistant for a Sociology and Anthropology professor.</p>
+            <a href="world.html">WORLD</a>
     </section>
         <section class="skills">
             <div class="programming-skills">
