--- a/assets/html/header.html
+++ b/assets/html/header.html
@@ -1,7 +1,7 @@
 
 <header>
     <div class="header-container">
-        <h1 class="header-title"><a href="../index.html" class="header-title">Ignas Vol&ccaron;okas</a></h1>
+        <h1 class="header-title"><a href="/index.html" class="header-title">Ignas Vol&ccaron;okas</a></h1>
         <nav class="header-nav">
             <a href="/index.html" class="nav-link home">Home</a>
             <a href="/about/about.html" class="nav-link about">About Me</a>
