--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ignas Volčokas</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">    
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     <link rel="stylesheet" href="/assets/css/header.css">
@@ -25,6 +24,71 @@
             <div class="box forth portfolio"><a class="Portfolio" href="portfolio/portfolio.html">Portfolio</a></div>
         </div>
     </div>
+
+
+    <!-- <div class="stickman" id="stickman" style="font-family: monospace; white-space: pre; display: none; position: absolute;"></div>
+    <script>
+        const stickmanNeutral = `
+           O
+          /|\\
+          / \\
+        `;
+        const stickmanWave = `
+          \\O\/
+           |
+          / \\
+        `;
+    
+        let isWaving = false;
+
+        function updateStickman() {
+            const stickmanElement = document.getElementById('stickman');
+            if (isWaving) {
+                stickmanElement.textContent = stickmanNeutral;  // Show neutral position
+            } else {
+                stickmanElement.textContent = stickmanWave;     // Show waving position
+            }
+            isWaving = !isWaving;  // Toggle state
+        }
+
+        function showStickman() {
+            const stickmanElement = document.getElementById('stickman');
+            // Calculate random positions within the viewport
+            const x = Math.floor(Math.random() * (window.innerWidth - stickmanElement.offsetWidth));
+            const y = Math.floor(Math.random() * (window.innerHeight - stickmanElement.offsetHeight));
+
+            // Set the new position
+            stickmanElement.style.left = x + 'px';
+            stickmanElement.style.top = y + 'px';
+
+            stickmanElement.style.display = 'block'; // Show the stickman
+            updateStickman();
+        }
+
+        function hideStickman() {
+            const stickmanElement = document.getElementById('stickman');
+            stickmanElement.style.display = 'none'; // Hide the stickman
+        }
+
+        function toggleStickman() {
+            const stickmanElement = document.getElementById('stickman');
+            if (stickmanElement.style.display === 'none') {
+                showStickman();
+            } else {
+                hideStickman();
+            }
+        }
+
+        // Set an interval to toggle the stickman every 5 seconds
+        setInterval(toggleStickman, 2000);
+
+        // Additional interval to switch between waving and neutral every second while visible
+        setInterval(updateStickman, 500);
+
+        // Initial call to show the stickman on page load
+        showStickman();
+    </script>     -->
+
 
     <div id="footer-placeholder"></div>
 
