--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -17,7 +17,10 @@
 
     <div class="intro">
         <input type="text" id="searchInput" placeholder="Search portfolio by title or tag...">
+        <button id="showBest" class="button">Personal Best</button>
+        <button id="showAll" class="button">Show All</button>
     </div>
+
 
     <div id="portfolioContainer">
         <!-- Portfolio items added by JavaScript -->
