--- a/portfolio/projects/automatedEmail.html
+++ b/portfolio/projects/automatedEmail.html
@@ -13,7 +13,7 @@
     <div class="container">
             <h1 id="esylearn">Automated Daily Email</h1> <hr>
             <h4>A daily check-in with a Google Form and some information about the world, the weather and a picture of a dog!</h4>
-            <p ><img src="/assets/exampleEmail.png" alt="Example email that would be sent each day" style="width: 100%;" /></p>
+            <p ><img src="/assets/exampleEmail.png" alt="Example email that would be sent each day" style="width: 60%;" /></p>
             <h3>Overview</h3>
             <p>I wanted to somehow keep track of my mood, habbits, sleep, etc., so that I would have data to play around with and get to better know myself. That's what this achieves.</p>
             <p>I get a daily reminder to fill out a Google Form which has questions I want to track, top 3 news of the day, wheather for the week and a cute picture of a dog to spark a smile.</p>
@@ -23,17 +23,23 @@
                 <li>Deploy a program on AWS</li>
                 <li>Get very comfortable with APIs</li>
             </ul>
-            <h3>Dependancies:</h3>
-            <ul>
-                <li>PyTube 15.0.0</li>
-                <li>PyGetWindow 0.0.9</li>
-            </ul>
             <h3>Lessons Learnt:</h3>
             <ul>
                 <li>How to use AWS Lambda</li>
                 <li>How to deploy dependancies to AWS Lambda</li>
                 <li>How to hide variables like API keys</li>
                 <li>How to format and send emails using Python</li>
+            </ul>
+            <h3>Dependancies:</h3>
+            <ul>
+                <li>Requests</li>
+                <li>EmailMessage</li>
+            </ul>
+            <h3>API:</h3>
+            <ul>
+                <li>The Dog API</li>
+                <li>Tomorrow API</li>
+                <li>News API</li>
             </ul>
             <h3>Future work:</h3>
             <ul>
@@ -42,7 +48,7 @@
                 <li>Automatically fetch all the new videos from the subscribed channels.</li>
             </ul>
 
-            <p>Source code can be found here: <a href="https://github.com/Iggy-V/YouTubeDownloader">GitHub</a></p>
+            <p>Source code can be found here: <a href="https://github.com/Iggy-V/AutomatedEmail">GitHub</a></p>
         </div>
     </div>
         <div id="footer-placeholder"></div>
