added buttons to sections

--- a/about/about.html
+++ b/about/about.html
@@ -58,8 +58,11 @@
                 I’m a rising senior in Washington and Lee University. I am majoring in Computer Science and minoring in Philosophy.
                 I work as a Teaching Assistant for the Computer Science department, a Peer Tutor and am on the executive teams of GenTech and Volleyball Club.
                 </p>
-
-
+                <br>
+                <p class="header-nav meat">
+                <a href="/blog/blog.html" class="nav-link blog">Blog</a>
+                <a href="/portfolio/portfolio.html" class="nav-link portfolio">Portfolio</a>
+                </p>
             </div>
 
             <div class="meat left-column">
@@ -168,6 +171,11 @@
                     <div class="skills"><div class="skill stata"></div></div>
                     </div>
                 </div>
+                <br>
+                <p class="header-nav meat">
+                    <a href="/portfolio/portfolio.html" class="nav-link portfolio">Portfolio</a>
+                    </p>
+
             </div>
         </section>
         
