added CV cleared style

--- a/about/about.html
+++ b/about/about.html
@@ -59,7 +59,8 @@
                 I work as a Teaching Assistant for the Computer Science department, a Peer Tutor and am on the executive teams of GenTech and Volleyball Club.
                 </p>
                 <br>
-                <p class="header-nav meat">
+                <p class="header-nav meat" style="gap: 15px">
+                <a class="CV" href="assets/Ignas_Volcokas_CV.pdf" target="_blank">CV</a>
                 <a href="/blog/blog.html" class="nav-link blog">Blog</a>
                 <a href="/portfolio/portfolio.html" class="nav-link portfolio">Portfolio</a>
                 </p>
