--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ignas Volčokas personal website">
+    <meta name="keywords" content="Ignas Volčokas, Ignas, Volcokas, Portfolio, Blog, CV, About">
     <title>Ignas Volčokas</title>
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
