updated content and spellchecked pages

--- a/portfolio/projects/automatedEmail.html
+++ b/portfolio/projects/automatedEmail.html
@@ -15,22 +15,22 @@
             <h4>A daily check-in with a Google Form and some information about the world, the weather and a picture of a dog!</h4>
             <p ><img src="/assets/exampleEmail.png" alt="Example email that would be sent each day" style="width: 60%;" /></p>
             <h3>Overview</h3>
-            <p>I wanted to somehow keep track of my mood, habbits, sleep, etc., so that I would have data to play around with and get to better know myself. That's what this achieves.</p>
-            <p>I get a daily reminder to fill out a Google Form which has questions I want to track, top 3 news of the day, wheather for the week and a cute picture of a dog to spark a smile.</p>
+            <p>I wanted to somehow keep track of my mood, habits, sleep, etc., so that I would have data to play around with and get to better know myself. That's what this achieves.</p>
+            <p>I get a daily reminder to fill out a Google Form which has questions I want to track, top 3 news of the day, weather for the week and a cute picture of a dog to spark a smile.</p>
             <h3>Goals</h3>
             <ul>
                 <li>Get a daily reminder to fill out a form</li>
                 <li>Deploy a program on AWS</li>
                 <li>Get very comfortable with APIs</li>
             </ul>
-            <h3>Lessons Learnt:</h3>
+            <h3>Lessons Learned:</h3>
             <ul>
                 <li>How to use AWS Lambda</li>
                 <li>How to deploy dependancies to AWS Lambda</li>
                 <li>How to hide variables like API keys</li>
                 <li>How to format and send emails using Python</li>
             </ul>
-            <h3>Dependancies:</h3>
+            <h3>dependencies:</h3>
             <ul>
                 <li>Requests</li>
                 <li>EmailMessage</li>
@@ -40,12 +40,6 @@
                 <li>The Dog API</li>
                 <li>Tomorrow API</li>
                 <li>News API</li>
-            </ul>
-            <h3>Future work:</h3>
-            <ul>
-                <li>Implement a way to download the videos in the background</li>
-                <li>Possibly make a Chrome extension</li>
-                <li>Automatically fetch all the new videos from the subscribed channels.</li>
             </ul>
 
             <p>Source code can be found here: <a href="https://github.com/Iggy-V/AutomatedEmail">GitHub</a></p>
