--- a/portfolio/projects/esylearn.html
+++ b/portfolio/projects/esylearn.html
@@ -16,8 +16,8 @@
             <h4>🏆 2nd place winner in HooHacks 2023 Hackathon Education Category</h4>
             <p><img src="/assets/esyLearn.png" alt="EsyLearn Project Image" /></p>
             <h3>Overview</h3>
-            <p>EsyLearn makes it possible to get easy, fast and read-out-loud answers from ChatGPT. Just ask a question and receive a verbal answer within seconds.</p>
-            <p>The project was inspired by growing skepticism around AI's role in education. We viewed ChatGPT not as a hurdle but as a tool to aid in educational processes.</p>
+            <p>EsyLearn allows you to easily get fast, spoken answers from ChatGPT. Just ask a question and receive a verbal answer within seconds.</p>
+            <p>The project was inspired by growing skepticism around AI's role in education. We viewed ChatGPT not as a hurdle, but as a tool to aid educational processes.</p>
             <h3>Goals</h3>
             <ul>
                 <li>Showcase how AI can help learning, addressing fears of ChatGPT being used to cheat.</li>
