--- a/portfolio/projects/picassoProject.html
+++ b/portfolio/projects/picassoProject.html
@@ -16,18 +16,18 @@
             <p ><img src="/assets/picassoProject.gif" alt="Example email that would be sent each day" style="width: 60%;" /></p>
             <h3>Overview</h3>
             <p>Final project for my CSCI 209: Software Development class.</p>
-            <p>You just have to put in a mathematical expression that uses x and/or y and boom art unfold before your eyes.</p>
+            <p>You just have to input a mathematical expression using x and/or y, and boom, the art unfolds before your eyes</p>
             <h3>Goals</h3>
             <ul>
                 <li>Understanding code base</li>
                 <li>Implementing basic functionality</li>
                 <li>Adding unique extensions</li>
             </ul>
-            <h3>Lessons Learnt:</h3>
+            <h3>Lessons Learned:</h3>
             <ul>
                 <li>How to code in Java and best Java practices</li>
                 <li>How to use Eclipse IDE</li>
-                <li>The importance of Single-Responsibility principle and DRY principle</li>
+                <li>The importance of the Single Responsibility Principle and the DRY Principle.</li>
                 <li>How to add new inventive features to a code base given.</li>
             </ul>
             <h3>Personal Contribution:</h3>
