--- a/portfolio/projects/weDoThat.html
+++ b/portfolio/projects/weDoThat.html
@@ -15,7 +15,7 @@
             <h4>Create, join and see the events surrounding you in your community. Connection has never been this easy!</h4>
             <p ><img src="/assets/weDoThat.png" alt="Example email that would be sent each day" style="width: 60%;" /></p>
             <h3>Overview</h3>
-            <p>A initial try of trying to create a website that would allow people to connect with their local communities.</p>
+            <p>An initial try of trying to create a website that would allow people to connect with their local communities.</p>
             <p>This project was created during HooHacks 2024 in University of Virginia!</p>
             <h3>Goals</h3>
             <ul>
@@ -35,11 +35,11 @@
             </ul>
             <h3>Future Work</h3>
             <ul>
-                <li>Ensure the log-in infromation is stored securly and there are certain requirements for username and password</li>
+                <li>Ensure the log-in information is stored securely and there are certain requirements for username and password</li>
                 <li>Implement a way to delete posts</li>
                 <li>Implement a way to edit posts</li>
-                <li>Implement a user profile where other's can see who you are</li>
-                <li>Implement an authentication system so that only trusted individuals are on the platform &lpar; something like Uber &rpar;;</li>
+                <li>Implement a user profile where others can see who you are</li>
+                <li>Implement an authentication system so that only trusted individuals are on the platform &lpar;something like Uber&rpar;</li>
                 <li>Limit the search area of the events only to a certain radius or location</li>
 
             </ul>
