--- a/portfolio/projects/ytDownloader.html
+++ b/portfolio/projects/ytDownloader.html
@@ -14,15 +14,15 @@
             <h1 id="esylearn">YouTube Downloader</h1> <hr>
             <h4>Download all opened YouTube links to prepare yourself for the scary life without internet.</h4>
             <p ><img src="/assets/ytDownloader.png" alt="Little animated character carrying a luggage with YouTube Videos" style="width: 50%;" /></p>
-            <p><span style="color:red">NOTE:</span> The code is for educational purposes and if used to download content from YouTube it must follow community guidlines set by YouTube
+            <p><span style="color:red">NOTE:</span> The code is for educational purposes and if used to download content from YouTube it must follow community guidelines set by YouTube
                 that can be found here: https://www.youtube.com/howyoutubeworks/policies/community-guidelines/</p>
             <h3>Overview</h3>
-            <p>YouTube Downloader makes it easy to prepare yourself for hours of flights, travelling to remote areas of the world while still being able to keep in toutch with your favorite content creators and sustain the YT addiction.</p>
+            <p>YouTube Downloader makes it easy to prepare for long flights or traveling to remote areas while staying in touch with your favorite content creators.</p>
             <p>The project was inspired by frequent flying and also served particularly useful while travelling during the Semester at Sea program.</p>
             <h3>Goals</h3>
             <ul>
                 <li>Be able to access YouTube videos without internet</li>
-                <li>Have a nice userinterface that is easy to use for the user</li>
+                <li>Have a nice user interface that is easy to use for the user</li>
             </ul>
             <h3>Dependancies:</h3>
             <ul>
