Edited Rights and Added Travel

--- a/about/about.html
+++ b/about/about.html
@@ -63,6 +63,8 @@
                 <a class="CV" href="/assets/Ignas_Volcokas_CV.pdf" target="_blank">CV</a>
                 <a href="/blog/blog.html" class="nav-link blog">Blog</a>
                 <a href="/portfolio/portfolio.html" class="nav-link portfolio">Portfolio</a>
+                <a href="/travel/travel.html" class="nav-link travel">Travel</a>
+
                 </p>
             </div>
 
@@ -187,6 +189,7 @@
        
     </div>
         <div id="footer-placeholder"></div>
+<script src="/assets/js/footer-loader.js"></script>
 
     
 </body>
