--- a/assets/html/footer.html
+++ b/assets/html/footer.html
@@ -8,5 +8,35 @@
             <a href="https://www.instagram.com/vlolcokas/" class="social-link" target="_blank"><img src="/assets/instagram.png" alt="Instagram" /></a>
 
         </div>
+        <br>
+        <div id="no-ai-training">
+        <p>No AI Training. No Data Mining </p>
+        <p>All content © 2025 Ignas Volčokas</p>
+        <p><a id="termsLink">Terms of Use</a> </p>
+        </div>
     </div>
+    
 </footer>
+
+<div id="termsModal" class="modal">
+  <div class="modal-content">
+    <span class="close" id="closeModal">&times;</span>
+    <h2>Terms of Use & Copyright Notice</h2>
+    <p>© 2025 Ignas Volčokas. All rights reserved.</p>
+    <p>
+      The content on this website — including text, images, code, and other materials — 
+      is the intellectual property of Ignas Volčokas and may not be copied, scraped, or used 
+      for any purpose without explicit written permission.
+    </p>
+    <p>
+      Automated systems, including but not limited to artificial intelligence (AI) models, 
+      data mining tools, and web crawlers, are <strong>prohibited</strong> from accessing, 
+      collecting, storing, or using this website’s content for the purpose of training 
+      or developing AI systems or machine learning models.
+    </p>
+    <p>
+      By accessing this site, you agree not to use or redistribute any of its content 
+      in ways that violate these terms.
+    </p>
+  </div>
+</div>
