--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -27,6 +27,7 @@
     </div>
 
     <div id="footer-placeholder"></div>
+<script src="/assets/js/footer-loader.js"></script>
     <script src="script.js"></script>
     <script>
         // Function to load HTML content and inject it into the DOM
