--- a/portfolio/projects/automatedEmail.html
+++ b/portfolio/projects/automatedEmail.html
@@ -46,6 +46,7 @@
         </div>
     </div>
         <div id="footer-placeholder"></div>
+<script src="/assets/js/footer-loader.js"></script>
 
         <script>
             // Function to load HTML content and inject it into the DOM
