--- a/about/about.html
+++ b/about/about.html
@@ -63,7 +63,7 @@
                 <a class="CV" href="/assets/Ignas_Volcokas_CV.pdf" target="_blank">CV</a>
                 <a href="/blog/blog.html" class="nav-link blog">Blog</a>
                 <a href="/portfolio/portfolio.html" class="nav-link portfolio">Portfolio</a>
-                <a href="/travel/travel.html" class="nav-link travel">Travel</a>
+                <a href="/travel/travel.html" class="nav-link travel">Travels</a>
 
                 </p>
             </div>
